--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "selenium-webdriver": "^4.21.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12"
+    "@types/node": "^20.12.12",
+    "jest": "^29.7.0"
   },
-  "scripts": {}
+  "scripts": {
+    "test": "jest"
+  }
 }
